# context7-agent-v3

./: .env.example  .gitignore  Project Architecture Review.md  Project Structure.md  README.md  docker_deployment_guide.md  extract_code_files.py  final_code_review.md  mlist  new_not_validated_codebase_files_set.md  original_design.md  original_improved_design.md  output.txt  pyproject.toml  requirements.txt  tips.txt
docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: AI_persona_2.md  AI_response.md  a1  a2  gemini-1.md  gemini-2.md  gemini-3.md  gemini-4.md  kimi-10.md  kimi-11.md  kimi-12.md  kimi-13.md  prompt.md  prompt_2.md  prompt_3.md  prompt_to_create.md  prompt_to_create_old.md  prompt_to_fix_1.md  prompt_to_fix_2.md  prompt_to_fix_3.md  prompt_to_improve.md
scripts/: run_tests.sh  test_coverage.py
src/: __init__.py  agent.py  cli.py  config.py  history.py  themes.py  utils.py
src.orig/: __init__.py  agent.py  cli.py  config.py  history.py  themes.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_cli.py  test_config.py  test_history.py  test_themes.py  test_utils.py
tests/integration/: test_agent_integration.py
